# GSoC_2022

./: README.md  index.md
gstreamer/basic+tuturial_3(exercise)/: basic-tutorial-3
gstreamer/basic_tutorial_1/: basic-tutorial-1
gstreamer/basic_tutorial_2/: basic-tutorial-2
gstreamer/basic_tutorial_2 (exercise)/: basic-tutorial-2
gstreamer/basic_tutorial_3/: basic-tutorial-3
gstreamer/libcamera_gstreamer_example/: README.md  README.md.save  basic-tutorial-2  basic-tutorial-2.c  libcamera_source_to_sink  libcamera_source_to_sink.c
libcamera_test_application_with_controls/: main.cpp  meson.build
